<?xml version="1.0"?>
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.ksm</groupId>
	<artifactId>bookstore</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	<packaging>quarkus</packaging>
	<name>KSM Faces Bookstore</name>
	<description>A pseudo startup project used in Faces application training</description>
	<inceptionYear>2013</inceptionYear>
	<organization>
		<name>KSM Technology Partners</name>
		<url>https://www.ksmpartners.com</url>
	</organization>
	<licenses>
		<license>
			<name>Commercial Confidential</name>
			<url>https://www.ksmpartners.com</url>
			<distribution>manual</distribution>
			<comments>Commercial Confidential</comments>
		</license>
	</licenses>
	<properties>
		<build.output>target</build.output>
		<!-- Global Properties -->
		<maven.compiler.release>25</maven.compiler.release>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<!-- Necessary Dependencies -->
		<myfaces.version>4.1.4</myfaces.version>
		<omnifaces-quarkus.version>5.5.3</omnifaces-quarkus.version>
		<primefaces-quarkus.version>4.16.0</primefaces-quarkus.version>
		<quarkus.version>3.39.5</quarkus.version>
		<primefaces-optimizer.version>2.7.9</primefaces-optimizer.version>
		<!-- Code Cleanliness Reports -->
		<jacoco.version>0.8.15</jacoco.version>
		<surefire.version>3.6.0</surefire.version>
		<pmd.version>7.27.0</pmd.version>
		<!-- Maven Plugins -->
		<maven-compiler-plugin.version>3.16.0</maven-compiler-plugin.version>
		<maven-javadoc-plugin.version>3.12.0</maven-javadoc-plugin.version>
		<maven-jxr-plugin.version>3.6.0</maven-jxr-plugin.version>
		<maven-pmd-plugin.version>3.28.0</maven-pmd-plugin.version>
		<maven-project-info-reports-plugin.version>3.9.0</maven-project-info-reports-plugin.version>
		<maven-site-plugin.version>3.22.0</maven-site-plugin.version>
		<maven-spotbugs-plugin.version>4.10.4.1</maven-spotbugs-plugin.version>
		<maven-taglist-plugin.version>3.2.3</maven-taglist-plugin.version>
	</properties>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>io.quarkus.platform</groupId>
				<artifactId>quarkus-bom</artifactId>
				<version>${quarkus.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<dependencies>
		<!-- Quarkus -->
		<dependency>
			<groupId>io.quarkus</groupId>
			<artifactId>quarkus-cache</artifactId>
		</dependency>
		<dependency>
			<groupId>io.quarkus</groupId>
			<artifactId>quarkus-hibernate-validator</artifactId>
		</dependency>
		<dependency>
			<groupId>io.quarkus</groupId>
			<artifactId>quarkus-info</artifactId>
		</dependency>
		<dependency>
			<groupId>io.quarkus</groupId>
			<artifactId>quarkus-rest-jackson</artifactId>
		</dependency>
		<dependency>
			<groupId>io.quarkus</groupId>
			<artifactId>quarkus-smallrye-health</artifactId>
		</dependency>
		<!-- Persistence -->
		<dependency>
			<groupId>io.quarkus</groupId>
			<artifactId>quarkus-hibernate-orm</artifactId>
		</dependency>
		<dependency>
			<groupId>io.quarkus</groupId>
			<artifactId>quarkus-jdbc-h2</artifactId>
		</dependency>
		<!-- Security -->
		<dependency>
			<groupId>io.quarkus</groupId>
			<artifactId>quarkus-elytron-security-properties-file</artifactId>
		</dependency>
		<!-- Faces -->
		<dependency>
			<groupId>org.apache.myfaces.core.extensions.quarkus</groupId>
			<artifactId>myfaces-quarkus</artifactId>
			<version>${myfaces.version}</version>
		</dependency>
		<dependency>
			<groupId>io.quarkiverse.primefaces</groupId>
			<artifactId>quarkus-primefaces</artifactId>
			<version>${primefaces-quarkus.version}</version>
		</dependency>
		<dependency>
			<groupId>io.quarkiverse.primefaces</groupId>
			<artifactId>quarkus-primefaces-extensions</artifactId>
			<version>${primefaces-quarkus.version}</version>
		</dependency>
		<dependency>
			<groupId>io.quarkiverse.omnifaces</groupId>
			<artifactId>quarkus-omnifaces</artifactId>
			<version>${omnifaces-quarkus.version}</version>
		</dependency>
		<!-- Utilities -->
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
		</dependency>
		<!-- Test -->
		<dependency>
			<groupId>io.quarkus</groupId>
			<artifactId>quarkus-junit</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>io.quarkus</groupId>
			<artifactId>quarkus-junit-mockito</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>io.rest-assured</groupId>
			<artifactId>rest-assured</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>
	<build>
		<directory>${build.output}</directory>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven-compiler-plugin.version}</version>
				<configuration>
					<parameters>true</parameters>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${surefire.version}</version>
				<configuration>
					<argLine>@{argLine} --enable-native-access=ALL-UNNAMED</argLine>
					<systemPropertyVariables>
						<java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
						<maven.home>${maven.home}</maven.home>
					</systemPropertyVariables>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>${jacoco.version}</version>
				<configuration>
					<excludes>
						<exclude>**/*_.*</exclude>
						<exclude>**/bdd/**</exclude>
						<exclude>**/dao/**</exclude>
						<exclude>**/jdbc/**</exclude>
						<exclude>**/manager/**</exclude>
						<exclude>**/mock/**</exclude>
						<exclude>**/protobuf/**</exclude>
						<exclude>**/Q*Dsl.*</exclude>
						<exclude>**/*BeanInfo.*</exclude>
						<exclude>**/qualifier/**</exclude>
						<exclude>**/schema/**</exclude>
						<exclude>**/ws/**</exclude>
						<exclude>**/xml/**</exclude>
						<exclude>**/bouncycastle/**</exclude>
						<exclude>**/*JpaFields*.*</exclude>
						<exclude>**/*JpaFields*$*.*</exclude>
					</excludes>
				</configuration>
				<executions>
					<execution>
						<id>default-prepare-agent</id>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>default-report</id>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-site-plugin</artifactId>
				<version>${maven-site-plugin.version}</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-pmd-plugin</artifactId>
				<version>${maven-pmd-plugin.version}</version>
				<configuration>
					<aggregate>true</aggregate>
					<minimumTokens>100</minimumTokens>
					<linkXref>true</linkXref>
					<sourceEncoding>utf-8</sourceEncoding>
					<targetJdk>${maven.compiler.release}</targetJdk>
					<skipEmptyReport>false</skipEmptyReport>
					<ignoreLiterals>false</ignoreLiterals>
					<excludes>
						<exclude>**/generated-sources/**/*.java</exclude>
						<exclude>**/protobuf/**/*.java</exclude>
						<exclude>**/xml/**/*.java</exclude>
						<exclude>**/rest/template/**/*.java</exclude>
					</excludes>
					<excludeRoots>
						<excludeRoot>${project.basedir}/target/generated-sources</excludeRoot>
						<excludeRoot>${project.basedir}/target/generated-sources/annotations</excludeRoot>
						<excludeRoot>${project.basedir}/target/generated-sources/xjc</excludeRoot>
						<excludeRoot>${project.basedir}/target/generated-sources/cxf</excludeRoot>
						<excludeRoot>${project.basedir}/target/generated-sources/querydsl</excludeRoot>
					</excludeRoots>
				</configuration>
				<dependencies>
					<dependency>
						<groupId>net.sourceforge.pmd</groupId>
						<artifactId>pmd-core</artifactId>
						<version>${pmd.version}</version>
					</dependency>
					<dependency>
						<groupId>net.sourceforge.pmd</groupId>
						<artifactId>pmd-java</artifactId>
						<version>${pmd.version}</version>
					</dependency>
					<dependency>
						<groupId>net.sourceforge.pmd</groupId>
						<artifactId>pmd-javascript</artifactId>
						<version>${pmd.version}</version>
					</dependency>
					<dependency>
						<groupId>net.sourceforge.pmd</groupId>
						<artifactId>pmd-jsp</artifactId>
						<version>${pmd.version}</version>
					</dependency>
				</dependencies>
			</plugin>
			<plugin>
				<groupId>org.primefaces.extensions</groupId>
				<artifactId>resources-optimizer-maven-plugin</artifactId>
				<version>${primefaces-optimizer.version}</version>
				<configuration>
					<inputDir>${project.build.directory}/classes/META-INF/resources</inputDir>
					<imagesDir>${project.build.directory}/classes/META-INF/resources</imagesDir>
					<useDataUri>false</useDataUri>
				</configuration>
				<executions>
					<execution>
						<id>optimize</id>
						<phase>prepare-package</phase>
						<goals>
							<goal>optimize</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>io.quarkus</groupId>
				<artifactId>quarkus-maven-plugin</artifactId>
				<version>${quarkus.version}</version>
				<extensions>true</extensions>
			</plugin>
		</plugins>
		<resources>
			<!-- Only filter properties and xml so pages, css and images are copied untouched -->
			<resource>
				<directory>src/main/resources</directory>
				<filtering>false</filtering>
				<excludes>
					<exclude>**/*.properties</exclude>
					<exclude>**/*.xml</exclude>
				</excludes>
			</resource>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
				<includes>
					<include>**/*.properties</include>
					<include>**/*.xml</include>
				</includes>
			</resource>
		</resources>
	</build>
	<reporting>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-project-info-reports-plugin</artifactId>
				<version>${maven-project-info-reports-plugin.version}</version>
				<configuration>
					<dependencyDetailsEnabled>true</dependencyDetailsEnabled>
					<dependencyLocationsEnabled>false</dependencyLocationsEnabled>
				</configuration>
				<reportSets>
					<reportSet>
						<reports>
							<report>summary</report>
							<report>dependencies</report>
							<report>scm</report>
							<report>ci-management</report>
							<report>team</report>
							<report>distribution-management</report>
							<report>plugins</report>
						</reports>
					</reportSet>
				</reportSets>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-pmd-plugin</artifactId>
				<version>${maven-pmd-plugin.version}</version>
				<configuration>
					<linkXRef>true</linkXRef>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>${maven-javadoc-plugin.version}</version>
				<reportSets>
					<reportSet>
						<id>default</id>
						<configuration>
							<notimestamp>true</notimestamp>
							<quiet>true</quiet>
							<detectLinks>false</detectLinks>
							<detectOfflineLinks>false</detectOfflineLinks>
							<detectJavaApiLink>false</detectJavaApiLink>
							<excludePackageNames>*.protobuf.*</excludePackageNames>
						</configuration>
						<reports>
							<report>javadoc</report>
						</reports>
					</reportSet>
				</reportSets>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jxr-plugin</artifactId>
				<version>${maven-jxr-plugin.version}</version>
				<configuration>
					<linkJavadoc>true</linkJavadoc>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-report-plugin</artifactId>
				<version>${surefire.version}</version>
				<configuration>
					<aggregate>false</aggregate>
				</configuration>
				<reportSets>
					<reportSet>
						<reports>
							<report>report-only</report>
							<report>failsafe-report-only</report>
						</reports>
					</reportSet>
				</reportSets>
			</plugin>
			<plugin>
				<groupId>com.github.spotbugs</groupId>
				<artifactId>spotbugs-maven-plugin</artifactId>
				<version>${maven-spotbugs-plugin.version}</version>
				<configuration>
					<effort>Max</effort>
					<threshold>Default</threshold>
					<spotbugsXmlOutput>true</spotbugsXmlOutput>
					<!-- Optional directory to put findbugs xml report -->
					<spotbugsXmlOutputDirectory>target/site</spotbugsXmlOutputDirectory>
					<omitVisitors>FindReturnRef,UnreadFields,FindNonSerializableStoreIntoSession,FindUseOfNonSerializableValue,SerializableIdiom,StaticLoggerDetector</omitVisitors>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>taglist-maven-plugin</artifactId>
				<version>${maven-taglist-plugin.version}</version>
				<configuration>
					<linkXref>true</linkXref>
					<aggregate>true</aggregate>
					<tagListOptions>
						<tagClasses>
							<tagClass>
								<displayName>TODO</displayName>
								<tags>
									<tag>
										<matchString>TODO</matchString>
										<matchType>ignoreCase</matchType>
									</tag>
									<tag>
										<matchString>@deprecated</matchString>
										<matchType>ignoreCase</matchType>
									</tag>
								</tags>
							</tagClass>
						</tagClasses>
					</tagListOptions>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>${jacoco.version}</version>
				<configuration>
					<excludes>
						<exclude>**/*_.*</exclude>
						<exclude>**/bdd/**</exclude>
						<exclude>**/dao/**</exclude>
						<exclude>**/jdbc/**</exclude>
						<exclude>**/manager/**</exclude>
						<exclude>**/mock/**</exclude>
						<exclude>**/protobuf/**</exclude>
						<exclude>**/Q*Dsl.*</exclude>
						<exclude>**/*BeanInfo.*</exclude>
						<exclude>**/qualifier/**</exclude>
						<exclude>**/schema/**</exclude>
						<exclude>**/ws/**</exclude>
						<exclude>**/xml/**</exclude>
						<exclude>**/bouncycastle/**</exclude>
						<exclude>**/*JpaFields*.*</exclude>
						<exclude>**/*JpaFields*$*.*</exclude>
					</excludes>
				</configuration>
			</plugin>
		</plugins>
	</reporting>
	<profiles>
		<profile>
			<id>vscode</id>
			<activation>
				<property>
					<name>m2e.version</name>
				</property>
			</activation>
			<properties>
				<build.output>target-ide</build.output>
			</properties>
		</profile>
	</profiles>
</project>
